--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.30"
+    ext {
+        kotlin_version = "1.4.30"
+        retrofit_version ="2.9.0"
+        moshi_version="1.11.0"
+    }
+
     repositories {
         google()
         jcenter()
